<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/fab_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/bagikan"
            android:textColor="@color/white"
            app:backgroundTint="@color/color_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />


        <include
            android:id="@+id/include3"
            layout="@layout/component_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp16"
            app:layout_constraintBottom_toTopOf="@+id/fab_news"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".main.ui.home.tablayout.agenda.add.AddAgendaFragment">


                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/kirim_agenda"
                    android:textColor="@color/content_and_title_color_post_and_agenda"
                    android:textSize="@dimen/sp14"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nunito_sans"
                    android:hint="@string/nama_kegiatan"
                    android:minHeight="48dp"
                    android:textColor="@color/content_and_title_color_post_and_agenda"
                    android:textSize="@dimen/sp12"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nunito_sans"
                    android:hint="@string/rincian_kegiatan"
                    android:minHeight="48dp"
                    android:textColor="@color/content_and_title_color_post_and_agenda"
                    android:textSize="@dimen/sp12"
                    app:layout_constraintTop_toBottomOf="@+id/editText" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nunito_sans"
                    android:hint="@string/lokasi_kegiatan"
                    android:minHeight="48dp"
                    android:textColor="@color/content_and_title_color_post_and_agenda"
                    android:textSize="@dimen/sp12"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" />


                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nunito_sans"
                    android:text="Tanggal Pelaksanaan"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText3" />


                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="TODO"
                    android:focusable="true"
                    android:fontFamily="@font/nunito_sans"
                    android:padding="@dimen/dp20"
                    android:text="@string/dd_mm_yyyy"
                    android:textColor="@color/content_and_title_color_post_and_agenda"
                    android:textSize="@dimen/sp12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/jam_mulai"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/dp20"
                    android:text="@string/time_format"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Brosur Kegiatan"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView6"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:visibility="gone"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView20">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/addImageAgenda"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/post"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/cancelImagePost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="@dimen/dp12"
                            android:minWidth="48dp"
                            android:minHeight="48dp"
                            android:src="@drawable/ic_baseline_cancel_24"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="SpeakableTextPresentCheck" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/fab_add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textSize="@dimen/sp12"
                    android:layout_marginBottom="16dp"
                    android:drawableLeft="@drawable/ic_baseline_add_photo_alternate_24"
                    android:text="@string/tambahkan_gambar"
                    android:textColor="@color/content_and_title_color_post_and_agenda"
                    app:backgroundTint="@color/background_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView6"
                    app:tint="@color/white" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>